upload file on cloudinary

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 PORT=5000
 MONGODB_URL="mongodb://localhost:27017"
 
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
 JWT_SECRET="secret"
