feat: implement khalti payment

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,7 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
+KHALTI_URL=https://dev.khalti.com/api/v2/epayment/initiate/
+KHALTI_API_KEY=
+
 JWT_SECRET="secret"
