--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Samarajya Shrestha",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.6.0",
