feat: integrate gemini

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ KHALTI_URL=https://dev.khalti.com/api/v2/epayment/initiate/
 KHALTI_API_KEY=
 
 JWT_SECRET="secret"
+
+GEMINI_URL="https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
+GEMINI_API_KEY=
