--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=5000
 MONGODB_URL="mongodb://localhost:27017"
+APP_URL="http://localhost:3000"
 
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
@@ -12,3 +13,5 @@ JWT_SECRET="secret"
 
 GEMINI_URL="https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
 GEMINI_API_KEY=
+
+EMAIL_SERVER_API_KEY=
