--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "start": "node app.js",
     "dev": "nodemon src/app.js"
   },
-  "author": "Samarajya Shrestha",
+  "author": "Prabin Dangol",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
-    "cloudinary": "^2.6.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.2",
-    "resend": "^4.2.0"
+    "resend": "^4.8.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.10"
   }
 }
